--- a/Copy_of_experiment02_numpy.ipynb
+++ b/Copy_of_experiment02_numpy.ipynb
@@ -57,28 +57,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "aci_dNppq6Dm",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 36
         },
-        "outputId": "1b3faee6-f84e-43a2-aa32-7070700671c5"
+        "outputId": "61468bf4-1e92-4aad-c6b4-a62bba006a14"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
+            "text/plain": [
+              "'1.21.6'"
+            ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
-            },
-            "text/plain": [
-              "'1.19.5'"
-            ]
+            }
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 1
         }
       ],
       "source": [
@@ -108,9 +108,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0misdp5Luo8h",
-        "outputId": "b2b59ebf-3a4b-43f4-e58a-5e88b18de88b"
+        "outputId": "37e3390b-6732-471f-f0b4-e60f59c82d04"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -120,7 +120,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 2
         }
       ]
     },
@@ -134,9 +134,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nEY3A3fKur-v",
-        "outputId": "1c988dee-ee29-4d0d-e917-b9506ded4eb6"
+        "outputId": "95bf3d95-e4c8-4de6-9ba9-53cdcbdd5e3b"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -146,7 +146,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 3
         }
       ]
     },
@@ -158,24 +158,22 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 185
+          "base_uri": "https://localhost:8080/"
         },
         "id": "peiODg-wu0UP",
-        "outputId": "ac2764b6-9a58-4f88-9bdb-adef3b05079c"
+        "outputId": "18f70e74-2cf3-4944-86f1-f3435b1ee9a3"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-0e853b340326>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mL2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mL\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mL2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'L' is not defined"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['0', '1', '2', '3', '4', '5', '6', '7', '8', '9']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
         }
       ]
     },
